[package]
name = "git-switch"
version = "0.0.5"
authors = ["Ashik Meerankutty <ashik9591@gmail.com>"]
license = "MIT"
description = "A tool to switch between git user configs"
readme = "README.md"
homepage = "https://github.com/ashikmeerankutty/git-switch"
repository = "https://github.com/ashikmeerankutty/git-switch"
keywords = ["cli", "git", "config"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
dirs = "5.0"
